<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="not_permission">Нет разрешения</string>
    <string name="app_name">Sarawan</string>
    <string name="title_home">Главная</string>
    <string name="title_basket">Корзина</string>
    <string name="title_profile">Профиль</string>
    <string name="information">Инфо</string>
    <string name="buy">Купить</string>
    <string name="price_text">₽</string>
    <string name="kg">кг</string>
    <string name="min_price">Мин. цена:</string>
    <string name="max_discount">Макс. скидка:</string>
    <string name="sort_price">Цене</string>
    <string name="sort_alphabet">Алфавиту</string>
    <string name="sort_discount">Скидке</string>
    <string name="default_product_title">Грибы шампиньоны свежие</string>
    <string name="product_sample_properties">уп. 600г</string>
    <string name="product_company_owner">Горзеленхоз</string>
    <string name="russia">Россия</string>
    <string name="lenta_shop">ЛЕНТА</string>
    <string name="default_sum">000,00 ₽</string>
    <string name="search_in_sarafan">Искать в сарафане</string>
    <string name="find_text">Найти</string>
    <string name="catalog">Каталог</string>
    <string name="weight_order">Вес заказа:</string>
    <string name="default_weight">00,00 г</string>
    <string name="cost_order">Стоимость заказа</string>
    <string name="sub_info_basket">Стоимость весового товара может быть пересчитана</string>
    <string name="clear">Очистить</string>
    <string name="delivery">Доставка</string>
    <string name="Address">Адрес</string>
    <string name="result_payment">Итого к оплате:</string>
    <string name="set_order">Оформить заказ</string>
    <string name="profile_phone_user_agreement">Нажимая на кнопку, я принимаю условия пользовательского соглашения</string>
    <string name="profile_phone_send_sms">Произвести Звонок с кодом</string>
    <string name="profile_phone_welcome">Добро пожаловать!</string>
    <string name="profile_phone_enter_number">Введите номер телефона, чтобы войти или зарегистрироваться.</string>
    <string name="profile_address_save">Сохранить</string>
    <string name="profile_address_apartment">Квартира</string>
    <string name="profile_address_entrance">Подъезд</string>
    <string name="profile_address_house">Дом</string>
    <string name="profile_address_street">Улица</string>
    <string name="profile_address_city">Город Москва</string>
    <string name="profile_address_title">Адрес</string>
    <string name="info_how_choice_products">Выберите продукты в каталоге. Система сама подберет вам самые выгодные предложения.</string>
    <string name="info_how_order_delivery">Оформите доставку на ближайшее время или нужную дату. Привезем ваш заказ в указанный срок.</string>
    <string name="info_how_subscribe">Оформите подписку и экономьте время, создавая готовые корзины для любых случаев.</string>
    <string name="info_info">Инфо</string>
    <string name="info_foo_user">Ирина Ивановна</string>
    <string name="info_foo_phone">+7 000 00 00 00</string>
    <string name="info_enter_or_register">Войдите или зарегистрируйтесь</string>
    <string name="info_register_to_buy">Чтобы делать покупки и отслеживать заказы необходимо зарегистрироваться</string>
    <string name="info_to_register">Зарегистрироваться</string>
    <string name="info_how_working">Как мы работаем</string>
    <string name="info_reviews">Отзывы</string>
    <string name="info_support">Служба поддержки</string>
    <string name="info_foo_toggle">toggle</string>
    <string name="info_about">О проекте</string>
    <string name="info_about_us">О нас</string>
    <string name="info_about_text">Мы хотим, чтобы у вас оставалось больше времени на то, что вы любите. С нашим сервисом вам не придется отвлекаться на походы по магазинам, вы сможете сосредоточиться на своей семье и любимом деле. А все нужные продукты вам доставит Сарафан.</string>
    <string name="info_about_features">Наши преимущества</string>
    <string name="info_about_wide_range">Широкий ассортимент</string>
    <string name="info_about_many_retails">На сайте представлены все крупные торговые сети</string>
    <string name="info_about_fresh_products">Только свежие продукты</string>
    <string name="info_about_test_quality">Обязательная проверка качества перед доставкой</string>
    <string name="info_about_cost_savings">Экономия средств</string>
    <string name="info_about_compare_prices">Система сравнивает цены в разных магазинах и выбирает товар с самой низкой ценой по городу</string>
    <string name="info_about_fast_delivery">Быстрая доставка</string>
    <string name="info_about_fast_delivery_text">Ваши любимые продукты из разных магазинов города будут на вашем столе уже завтра</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_add_name">Добавить имя</string>
    <string name="profile_foo_phone">+7 000 00 00</string>
    <string name="profile_phone_mask" tools:ignore="TypographyDashes">+7 (999) 999-99-99</string>
    <string name="profile_add_address">Адрес</string>
    <string name="profile_exit">Выйти</string>
    <string name="profile_alert_no_change_city">Вы не можете поменять город.</string>
    <string name="profile_alert_only_moscow">На данный момент сервис\n действует только в г. Москва.</string>
    <string name="profile_alert_ok">OK</string>
    <string name="profile_name_add_name">Добавить имя</string>
    <string name="profile_name_name">Имя</string>
    <string name="profile_name_lastname">Фамилия</string>
    <string name="profile_name_save">Сохранить</string>
    <string name="default_count">1 шт.</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="price_other_store">Цена в других магазинах:</string>
    <string name="similar_products_view">С этим товаром смотрят:</string>
    <string name="description">Описание</string>
    <string name="delivery_price">Стоимость доставки</string>
    <string name="profile_code_enter_code_from_sms">Введите последние 4 цифры из звонившего вам номера</string>
    <string name="profile_code_send_code">Отправить</string>
    <string name="profile_code_code_sent">Код отправлен на телефон\n</string>
    <string name="profile_code_request_again">Запросить код повторно</string>
    <string name="profile_code_re_request_code_in">Запросить код повторно: через</string>
    <string name="profile_code_wrong_code">Неверный код</string>
    <string name="profile_success_registered">Вы успешно зарегистрировались!</string>
    <string name="profile_success_ok">OK</string>
    <string name="confirm_order_message">Ваш заказ успешно оформлен!</string>
    <string name="basket_empty">Корзина пуста</string>
    <string name="nav_sales">Перейти к покупкам</string>
    <string name="error_500">Что то пошло не так, повторите попытку позже</string>
    <string name="no_items">К сожалению, такого товара нет.</string>
    <string name="press_back_again_to_exit">Для выхода нажмите \"Назад\" еще раз</string>
    <string name="no_internet">Нет соединения с интернетом! Повторите попытку позже!</string>
    <string name="refresh">Обновить</string>
    <string name="no_connection">Нет соединения</string>
    <string name="check_network_and_refresh">Проверьте соединение с сетью и обновите страницу</string>
    <string name="nav_order">Перейти к оформлению</string>
    <string name="order">Заказ</string>
    <string name="rub_symbol">₽</string>
    <string name="order_mask">№00000,00</string>
    <string name="received">Получен</string>
    <string name="assembly">В сборке</string>
    <string name="assambled">Собран</string>
    <string name="handed_courier">Передан курьеру</string>
    <string name="smd_send_error">При отправке смс кода произошла ошибка, повторите попытку позднее</string>
    <string name="incorrect_number">Номер не корректный</string>
    <string name="show_user_reference">Показать пользовательское соглашение!</string>
    <string name="save_success">Сохранение прошло успешно</string>
    <string name="street_empty">Улица не заполнена</string>
    <string name="house_empty">Дом не заполнена</string>
    <string name="room_number_empty">Номер квартиры не заполнена</string>
    <string name="server_data_error">Произошла ошибка получения данных</string>
    <string name="recomended">Мы рекомендуем</string>
    <string name="sponsored_items">Выгодные предложения</string>
    <string name="show_all">Посмотреть всё</string>
    <string name="select_a_country">Select a country</string>
    <string name="fill_address">Введите адрес</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="confrim_select_address">Подтвердите выбор адреса</string>
    <string name="confrim">Подтвердить</string>
    <string name="error_server_order">Ошибка сервера попробуйте оформить заказ позже</string>
</resources>