<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="27dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_product_text_view"
        android:text="@string/default_product_title"
        android:textColor="@color/black_product_title"
        android:textSize="@dimen/title_product_text_size"
        android:fontFamily="@font/montserrat_medium"
        android:alpha=".87"
        android:layout_marginTop="2sp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:shadowDy="2"
        android:shadowDx="0.87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
      />

    <TextView
        android:id="@+id/properties_text_view"
        android:text="@string/product_sample_properties"
        android:textColor="@color/black_product_title"
        android:textSize="@dimen/sub_text_font_size"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="2sp"
        android:shadowColor="@color/black"
        android:alpha=".87"
        android:shadowDx="0.87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_product_text_view" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/trash_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/trash_bascket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4sp"
        android:layout_marginEnd="5sp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/product_image_view"
        android:layout_width="174dp"
        android:layout_height="104dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/product_sample_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/properties_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_company_text_view"
        android:textColor="@color/black_product_title"
        android:textSize="@dimen/shop_info_font_size"
        android:fontFamily="@font/montserrat_regular"
        android:shadowColor="@color/black"
        android:alpha=".87"
        android:shadowDx="0.87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_company_owner"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/product_image_view"
        app:layout_constraintTop_toBottomOf="@+id/properties_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_country_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".87"
        android:fontFamily="@font/montserrat_regular"
        android:shadowColor="@color/black"
        android:shadowDx="0.87"
        android:text="@string/russia"
        android:textColor="@color/black_product_title"
        android:textSize="@dimen/shop_info_font_size"
        android:layout_marginTop="4dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/product_image_view"
        app:layout_constraintTop_toBottomOf="@+id/product_company_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_shop_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:alpha=".87"
        android:fontFamily="@font/montserrat_regular"
        android:shadowColor="@color/black"
        android:shadowDx="0.87"
        android:text="@string/lenta_shop"
        android:textColor="@color/black_product_title"
        android:textSize="@dimen/shop_info_font_size"
        app:layout_constraintStart_toEndOf="@+id/product_image_view"
        app:layout_constraintTop_toBottomOf="@+id/product_company_text_view" />

    <TextView
        android:id="@+id/sum__text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/default_sum"
        android:textColor="@color/black"
        android:textSize="@dimen/title_product_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageButton"
        app:layout_constraintTop_toBottomOf="@+id/product_image_view" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatImageButton"
        style="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/product_shop_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>